src/Tests/Error/NotNullError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class NotNullError extends AssertError
{
}
